k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: novintix-app
  labels:
    app: novintix
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: novintix
  template:
    metadata:
      labels:
        app: novintix
    spec:
      containers:
        - name: novintix
          image: 930199791418.dkr.ecr.us-east-1.amazonaws.com/docker/dimages:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

          # Health Checks
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
