k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nojejs-service
spec:
  type: ClusterIP
  selector:
    app: nodejs
  ports:
    - port: 80
      targetPort: 3000
